apps/envoy-gateway-config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app-routes
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - kind: Service
        name: test-app-service
        namespace: default
        port: 80
